Update rotate warning and styles in index.html
Replaced the rotate warning overlay and adjusted styles.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Birthday</title>
 
 <style>
@@ -20,10 +19,11 @@
         font-weight: bold;
         margin-top: 20px;
         color: #ff00ff;
-        text-shadow: 0 0 5px #ff00ff,
-                     0 0 10px #ff00ff,
-                     0 0 20px #ff00ff,
-                     0 0 40px #ff00ff;
+        text-shadow:
+            0 0 5px #ff00ff,
+            0 0 10px #ff00ff,
+            0 0 20px #ff00ff,
+            0 0 40px #ff00ff;
         animation: blink 1.3s infinite;
     }
     @keyframes blink {
@@ -31,7 +31,9 @@
         50% { opacity: 0.4; }
     }
 
-    .container { margin-top: 30px; }
+    .container {
+        margin-top: 30px;
+    }
 
     video {
         width: 80%;
@@ -52,50 +54,39 @@
         font-size: 18px;
         transition: 0.2s;
     }
-    .btn:hover { background: #ff44ff; }
+    .btn:hover {
+        background: #ff44ff;
+    }
 
-    /* ⭐ Màu chữ bài thơ */
+    /* Màu neon cho bài thơ */
     .poemColor {
         color: #7dffff;
         text-shadow: 0 0 8px #7dffff, 0 0 18px #4dffff;
     }
 
-    /* ⭐ THÔNG BÁO XOAY ĐIỆN THOẠI */
-    #rotateWarning {
+    /* OVERLAY xoay ngang */
+    #rotateNotice {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.92);
-        z-index: 9999;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: #000;
+        color: #00eaff;
         display: none;
-        align-items: center;
         justify-content: center;
-        flex-direction: column;
+        align-items: center;
         text-align: center;
         padding: 20px;
-    }
-    #rotateWarning img {
-        width: 130px;
-        margin-bottom: 20px;
-        filter: drop-shadow(0 0 10px #00eaff);
-    }
-    #rotateWarning p {
         font-size: 28px;
         font-weight: bold;
-        color: #7dffff;
-        text-shadow: 0 0 10px #00eaff;
+        z-index: 999999;
+        text-shadow: 0 0 10px #00eaff, 0 0 20px #00eaff;
     }
 </style>
 </head>
 <body>
 
-<!-- ⭐ CẢNH BÁO XOAY MÀN HÌNH -->
-<div id="rotateWarning">
-    <img src="https://i.imgur.com/xYI5o9h.png">
-    <p>Vui lòng xoay ngang để xem đẹp nhất 💙</p>
-</div>
+<!-- OVERLAY yêu cầu xoay ngang -->
+<div id="rotateNotice">📱 Vui lòng xoay ngang màn hình để xem đầy đủ 🎉</div>
 
 <!-- TEXT LEFT & RIGHT TYPEWRITER -->
 <div id="typeLeft"
@@ -129,6 +120,7 @@
     <button class="btn" onclick="toggleMusic('audio2')">▶ Phát nhạc 2</button>
 </div>
 
+
 <script>
 // Auto play video
 document.getElementById("videoPlayer").play();
@@ -136,8 +128,11 @@ document.getElementById("videoPlayer").play();
 // Toggle nhạc
 function toggleMusic(id){
     const audio = document.getElementById(id);
-    if(audio.paused) audio.play();
-    else audio.pause();
+    if(audio.paused){
+        audio.play();
+    } else {
+        audio.pause();
+    }
 }
 </script>
 
@@ -186,6 +181,7 @@ size();
 window.onresize = size;
 
 let pieces = [];
+
 function rand(a,b){ return Math.random()*(b-a)+a; }
 
 function spawn(){
@@ -213,8 +209,10 @@ function loop(){
         ctx.save();
         ctx.translate(p.x,p.y);
         ctx.rotate(p.r * Math.PI/180);
+
         ctx.fillStyle = `hsl(${(p.x+p.y)%360} 80% 60%)`;
         ctx.fillRect(-p.s/2, -p.s/2, p.s, p.s*0.6);
+
         ctx.restore();
     });
 
@@ -223,25 +221,25 @@ function loop(){
 
     requestAnimationFrame(loop);
 }
-spawn(); loop();
+
+spawn();
+loop();
 </script>
 
 <script>
-// ⭐ AUTO DETECT XOAY NGANG CHO ĐIỆN THOẠI
-function checkOrientation(){
-    const warn = document.getElementById("rotateWarning");
+// CHECK XOAY MÀN HÌNH
+function checkOrientation() {
+    const notice = document.getElementById("rotateNotice");
 
-    if(window.innerHeight > window.innerWidth){
-        // Đang XOAY DỌC → chặn màn hình
-        warn.style.display = "flex";
+    if (window.innerHeight > window.innerWidth) {
+        notice.style.display = "flex";
     } else {
-        // XOAY NGANG → cho xem
-        warn.style.display = "none";
+        notice.style.display = "none";
     }
 }
 
+checkOrientation();
 window.addEventListener("resize", checkOrientation);
-window.addEventListener("load", checkOrientation);
 </script>
 
 </body>
