--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@ function toggleMusic(id){
 
 <script>
 // TYPEWRITER
-const textLeft = `Chúc Linh sinh nhật tưng bừng,
-Dù vẫn lôn lình đúng chất Linh từng ngày qua.
-Đi thì luôi bình thật thà,
-Nhưng miệng lo chính nghe là muốn quạo liền.`;
+const textLeft = `Sinh nhật Trang rộn trôn làng
+Niềm vui theo gió chân đàng ghé thăm
+Chúc mày hạnh phúc trăm năm
+Tay nâng kỷ niệm chuôi bàng dịu êm`;
 
-const textRight = `Tính Linh pha chút lân đình duyên,
-Làm ai cũng phải cười điên mỗi lần gặp.
-Sinh nhật vui vẻ Linh nhé,
-Giữ cái nết đó… cho đời bớt nhạt nha.`;
+const textRight = `Tuổi mới sáng tựa trăng lên
+Buồn xưa hóa khói tro cháng bay xa
+Đường đời thêm ngả nở hoa
+Mỉm cười đón gió chan hòa yêu thương.`;
 
 function typeWriter(el, text, speed=40){
     let i = 0;
@@ -244,3 +244,4 @@ window.addEventListener("resize", checkOrientation);
 
 </body>
 </html>
+
