--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <!-- CONFETTI -->
 <canvas id="confettiCanvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;pointer-events:none;"></canvas>
 
-<div class="neon">🎉 HAPPY 0.0 BIRTHDAY 🎉</div>
+<div class="neon">🎉 HAPPY 6️⃣7️⃣ BIRTHDAY  🎉</div>
 
 <!-- VIDEO -->
 <div class="container">
@@ -244,4 +244,5 @@ window.addEventListener("resize", checkOrientation);
 
 </body>
 </html>
+
 
